# sedona-db

./: .asf.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE  PORTING_GEO_COMMITS.txt  README.md  TODO_GEO_COMMITS.txt  compose.yml  mkdocs.yml  versions.json
.cargo/: config.toml
.github/workflows/: assign-reviewer-write.yml  assign-reviewer.yml  dev.yml  examples.yml  packaging.yml  python-wheels.yml  python.yml  r-extended.yml  r.yml  rust-gpu.yml  rust.yml  wheels-expr.yml  wheels-zarr.yml
0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0/contributors-guide/: index.html
0.1.0/crs-examples/: index.html
0.1.0/development/: index.html
0.1.0/geopandas-interop/: index.html
0.1.0/overture-examples/: index.html
0.1.0/programming-guide/: index.html
0.1.0/quickstart-cli/: index.html
0.1.0/quickstart-python/: index.html
0.1.0/search/: search_index.json
0.1.0/tags/: index.html
0.1.0/working-with-parquet-files/: index.html
0.1.0/working-with-sql-sedonadb/: index.html
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/contributors-guide/: index.html
0.2.0/crs-examples/: index.html
0.2.0/delta-lake/: index.html
0.2.0/geopandas-interop/: index.html
0.2.0/overture-examples/: index.html
0.2.0/programming-guide/: index.html
0.2.0/quickstart-python/: index.html
0.2.0/search/: search_index.json
0.2.0/working-with-parquet-files/: index.html
0.2.0/working-with-sql-sedonadb/: index.html
0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0/contributors-guide/: index.html
0.3.0/crs-examples/: index.html
0.3.0/delta-lake/: index.html
0.3.0/geopandas-interop/: index.html
0.3.0/iceberg/: index.html
0.3.0/memory-management/: index.html
0.3.0/overture-examples/: index.html
0.3.0/postgis/: index.html
0.3.0/programming-guide/: index.html
0.3.0/quickstart-python/: index.html
0.3.0/release-notes/: index.html
0.3.0/search/: search_index.json
0.3.0/working-with-parquet-files/: index.html
0.3.0/working-with-sql-sedonadb/: index.html
0.4.0/: 404.html  crs-examples.ipynb  index.html  objects.inv  sitemap.xml
0.4.0/contributors-guide/: index.html
0.4.0/crs-examples/: index.html
0.4.0/delta-lake/: index.html
0.4.0/iceberg/: index.html
0.4.0/memory-management/: index.html
0.4.0/overture-examples/: index.html
benchmarks/: README.md  conftest.py  test_affine.py  test_bench_base.py  test_distance.py  test_functions.py  test_knn.py  test_overlay.py  test_predicates.py  test_transform.py
c/: CMakeUserPresets.json
dev-snapshot-main/: 404.html  index.html
docker/: sedonadb-gpu.dockerfile
docs/: README.md  contributors-guide.md  crs-examples.ipynb  crs-examples.md  delta-lake.ipynb  delta-lake.md  development.md  flatgeobuf.ipynb  flatgeobuf.md  geopandas-interop.ipynb  gpu-acceleration.ipynb  gpu-acceleration.md  iceberg.ipynb  iceberg.md  index.md  memory-management.ipynb  memory-management.md  overture-examples.ipynb  overture-examples.md  postgis.ipynb  postgis.md  programming-guide.ipynb  programming-guide.md  quickstart-python.ipynb  requirements.txt  working-with-zarr-ndarray-sedonadb.ipynb  working-with-zarr-ndarray-sedonadb.md
examples/sedonadb-rust/: Cargo.toml
examples/sedonadb-rust/src/: main.rs
latest-snapshot/: 404.html  index.html  objects.inv  overture-examples.ipynb  sitemap.xml
python/sedonadb-zarr/: Cargo.toml  README.md  pyproject.toml
python/sedonadb-zarr/python/sedonadb_zarr/: __init__.py
python/sedonadb-zarr/src/: lib.rs
python/sedonadb-zarr/tests/: conftest.py  test_zarr.py  test_zarr_raster_functions.py
rust/geo-generic-alg/: Cargo.toml  README.md
rust/geo-generic-alg/benches/: area.rs  centroid.rs  distance.rs  intersection.rs  length.rs  perimeter.rs
rust/geo-generic-alg/benches/utils/: wkb_util.rs
rust/geo-generic-alg/src/: geometry.rs  geometry_cow.rs  lib.rs  types.rs  utils.rs
rust/geo-generic-alg/src/algorithm/: affine_ops.rs  area.rs  bounding_rect.rs  centroid.rs  convert.rs  coordinate_position.rs  coords_iter.rs  dimensions.rs  euclidean_length.rs  extremes.rs  map_coords.rs  mod.rs  rotate.rs  scale.rs  simplify.rs  skew.rs  translate.rs
rust/geo-generic-alg/src/algorithm/intersects/: collections.rs  coordinate.rs  line.rs  line_string.rs  mod.rs  point.rs  polygon.rs  rect.rs  triangle.rs
rust/geo-generic-alg/src/algorithm/kernels/: mod.rs  robust.rs
rust/geo-generic-alg/src/algorithm/line_measures/: distance.rs  length.rs  mod.rs
rust/geo-generic-alg/src/algorithm/line_measures/metric_spaces/: mod.rs
rust/geo-generic-alg/src/algorithm/line_measures/metric_spaces/euclidean/: distance.rs  mod.rs  utils.rs
rust/sedona-pointcloud/: Cargo.toml
rust/sedona-pointcloud/src/: lib.rs  options.rs
rust/sedona-pointcloud/src/las/: builder.rs  format.rs  metadata.rs  mod.rs  opener.rs  options.rs  reader.rs  schema.rs  source.rs  statistics.rs
rust/sedona-pointcloud/src/laz/: builder.rs  format.rs  metadata.rs  mod.rs  opener.rs  options.rs  reader.rs  schema.rs  source.rs  statistics.rs
rust/sedona-pointcloud/tests/data/: extra.las  extra.laz  generate.py  large.las  large.laz
rust/sedona-raster-gdal/: Cargo.toml
rust/sedona-raster-gdal/benches/: bench_common.rs  rs_as_geotiff.rs  rs_as_raster.rs  rs_clip.rs  rs_from_gdal_raster.rs  rs_from_path.rs  rs_frompath.rs  rs_geotiff_tiles.rs  rs_map_algebra.rs  rs_polygonize.rs  rs_value.rs  rs_zonal_stats.rs
rust/sedona-raster-gdal/src/: gdal_common.rs  gdal_dataset_provider.rs  lib.rs  outdb_loader.rs  raster_band_reader.rs  raster_loader.rs  register.rs  rs_as_geotiff.rs  rs_as_raster.rs  rs_clip.rs  rs_from_gdal_raster.rs  rs_from_path.rs  rs_frompath.rs  rs_geotiff_tiles.rs  rs_map_algebra.rs  rs_metadata.rs  rs_polygonize.rs  rs_value.rs  rs_zonal_stats.rs  source_uri.rs  utils.rs
rust/sedona-raster-zarr/: Cargo.toml
rust/sedona-raster-zarr/src/: coords.rs  format_spec.rs  geozarr.rs  lib.rs  loader.rs  outdb_loader.rs  raster_loader.rs  source_uri.rs  udtf.rs
rust/sedona-raster-zarr/tests/: cloud.rs  zarr_roundtrip.rs
sedona-cli/: Cargo.toml
(+1836 files in other folders)
