# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "sedonadb-zarr"
version = { workspace = true }
publish = false
edition = "2021"

[lib]
# rustc crate name. Distinct from `sedonadb`'s `_lib` to avoid the
# rustdoc output-path collision on `cargo doc --workspace`. Maturin
# renames the compiled cdylib to match `module-name` in
# `pyproject.toml` (`sedonadb_zarr._lib`), so the Python import path
# is unaffected by this name.
name = "sedonadb_zarr_lib"
crate-type = ["cdylib"]

[dependencies]
arrow-array = { workspace = true }
pyo3 = { version = "0.25.1" }
sedona-raster-zarr = { workspace = true }
# The sedonadb Python extension; its rustc crate name is `_lib` per
# the `[lib].name` override in `python/sedonadb/Cargo.toml`. We import
# it in `src/lib.rs` via the leading `::_lib` syntax to disambiguate
# from our own crate's `_lib` pymodule.
sedonadb = { workspace = true }
