# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
[package]
name = "geo-generic-alg"
version.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["multithreading"]
use-serde = ["serde", "geo-types/serde"]
multithreading = ["i_overlay/allow_multithreading", "geo-types/multithreading"]

[dependencies]
float_next_after = { workspace = true }
geo-traits = { workspace = true }
geo-types = { workspace = true, features = ["approx", "use-rstar_0_12"] }
geo-traits-ext = { path = "../geo-traits-ext" }
log = "0.4.11"
num-traits = { workspace = true }
robust = "1.1.0"
rstar = "0.12.0"
serde = { workspace = true, features = ["derive"], optional = true }
i_overlay = { version = "4.0.0, < 4.1.0", default-features = false }

[dev-dependencies]
geo-test-fixtures = { path = "../geo-test-fixtures" }
approx = { workspace = true }
criterion = { workspace = true }
pretty_env_logger = "0.4"
rand = { workspace = true }
rand_distr = "0.4.3"
geo = { workspace = true }
wkb = { workspace = true }
wkt = { workspace = true }

[[bench]]
name = "area"
harness = false

[[bench]]
name = "intersection"
harness = false

[[bench]]
name = "centroid"
harness = false

[[bench]]
name = "length"
harness = false

[[bench]]
name = "distance"
harness = false

[[bench]]
name = "perimeter"
harness = false
