[package]
name = "sedona-pointcloud"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-stream = "0.3.6"
async-trait = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
datafusion-catalog = { workspace = true }
datafusion-common = { workspace = true }
datafusion-datasource = { workspace = true }
datafusion-execution = { workspace = true }
datafusion-physical-expr = { workspace = true }
datafusion-physical-plan = { workspace = true }
datafusion-pruning = { workspace = true }
futures = { workspace = true }
las = { version = "0.9.8", features = ["laz"] }
laz = "0.11.1"
object_store = { workspace = true }
