# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
[package]
name = "sedona-raster-gdal"
version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description = "GDAL integration for Apache SedonaDB raster types"
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints.clippy]
result_large_err = "allow"

[dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
async-trait = { workspace = true }
datafusion = { workspace = true, default_features = false }
datafusion-common = { workspace = true }
datafusion-common-runtime = { workspace = true }
datafusion-expr = { workspace = true }
evalexpr = "13"
futures = { workspace = true }
lru = { workspace = true }
sedona-common = { workspace = true }
sedona-expr = { workspace = true }
sedona-geometry = { workspace = true }
sedona-raster = { workspace = true }
sedona-raster-functions = { workspace = true }
sedona-schema = { workspace = true }
sedona-proj = { workspace = true }
sedona-gdal = { workspace = true }
wkb = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
sedona-gdal = { workspace = true, features = ["gdal-sys"] }
sedona-proj = { workspace = true, features = ["proj-sys"] }
sedona-testing = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[[bench]]
harness = false
name = "rs_value"
path = "benches/rs_value.rs"

[[bench]]
harness = false
name = "rs_from_gdal_raster"
path = "benches/rs_from_gdal_raster.rs"

[[bench]]
harness = false
name = "rs_as_geotiff"
path = "benches/rs_as_geotiff.rs"

[[bench]]
harness = false
name = "rs_polygonize"
path = "benches/rs_polygonize.rs"

[[bench]]
harness = false
name = "rs_clip"
path = "benches/rs_clip.rs"

[[bench]]
harness = false
name = "rs_zonal_stats"
path = "benches/rs_zonal_stats.rs"

[[bench]]
harness = false
name = "rs_map_algebra"
path = "benches/rs_map_algebra.rs"

[[bench]]
harness = false
name = "rs_from_path"
path = "benches/rs_from_path.rs"
