# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
[package]
name = "sedona-raster-zarr"
version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints.clippy]
result_large_err = "allow"

[dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
datafusion-common = { workspace = true }
log = { workspace = true }
sedona-common = { workspace = true }
sedona-raster = { workspace = true }
sedona-schema = { workspace = true }
serde_json = { workspace = true }
zarrs = { workspace = true, features = ["filesystem", "gzip", "zstd", "crc32c", "sharding", "transpose"] }
zarrs_filesystem = { workspace = true }

# `blosc` is gated off the Windows MinGW (gnu) toolchain only: c-blosc
# (statically linked) bundles its own `pthread_create` / `pthread_cond_*`
# symbols, which conflict with rtools45's `libpthread.a` during the MinGW
# link of the R `sedonadb.dll`. The MSVC toolchain (Python wheels, etc.)
# uses a different pthread implementation and is fine.
[target.'cfg(not(all(target_os = "windows", target_env = "gnu")))'.dependencies]
zarrs = { workspace = true, features = ["blosc"] }

[dev-dependencies]
tempfile = { workspace = true }
